--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,14 @@
 <head>
-
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="houseme_manifest.json">
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
   <meta name="fragment" content="!">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
-
 </head>
+
 <body>
-
-<main-view></main-view>
-
+  <main-view></main-view>
 </body>
